@@ -26,7 +26,9 @@ files.
 Version 0.0.11
 --------------
 
- * translation into Czech
+ * allow equations in subcircuits
+ * subcircuits parameters
+ * translation into Czech and Catalan
 
 Version 0.0.10
 --------------
